k8slab/k8s/appone/nginx/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    name: nginx
